feat: patch endpoints for workouts and movements
